filter minor bug

--- a/src/app/components/recipe-list/recipe-list.html
+++ b/src/app/components/recipe-list/recipe-list.html
@@ -16,7 +16,7 @@
       <!-- Ingredients Filter -->
       <div>
         <label class="font-semibold block mb-1">Ingredients</label>
-        <input type="text" formControlName="ingredients" placeholder="Comma-separated ingredients (e.g., eggs, sugar)"
+        <input type="text" formControlName="ingredients" placeholder="Ingredients (eggs, tomato, etc.)"
           class="w-full border rounded-md p-2" />
       </div>
 
