edit,delete and go back

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -35,6 +35,14 @@
       >
         Recipes
       </a>
+
+      <a
+        routerLink="/add"
+        routerLinkActive="text-orange-600"
+        class="text-gray-600 hover:text-orange-500 transition"
+      >
+        Create
+      </a>
     </nav>
   </div>
 </header>
