--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -37,7 +37,7 @@
       </a>
 
       <a
-        routerLink="/add"
+        routerLink="/recipes/add"
         routerLinkActive="text-orange-600"
         class="text-gray-600 hover:text-orange-500 transition"
       >
