--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -23,7 +23,7 @@
 
     <!-- Secondary button -->
     <button
-      routerLink="/add"
+      routerLink="/recipes/add"
       class="px-6 py-3 rounded-full border border-orange-200 bg-white text-orange-600 font-medium hover:bg-orange-50 transition"
     >
       Add New Recipe
